// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyForm 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Back
    </button>
    <table
      class="table"
    >
      <tbody>
        <tr>
          <td>
            acceptRules
          </td>
          <td>
            false
          </td>
        </tr>
        <tr>
          <td>
            address
          </td>
          <td />
        </tr>
        <tr>
          <td>
            city
          </td>
          <td />
        </tr>
        <tr>
          <td>
            country
          </td>
          <td />
        </tr>
        <tr>
          <td>
            email
          </td>
          <td />
        </tr>
        <tr>
          <td>
            password
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`MyForm 2`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Back
    </button>
    <table
      class="table"
    >
      <tbody>
        <tr>
          <td>
            acceptRules
          </td>
          <td>
            true
          </td>
        </tr>
        <tr>
          <td>
            address
          </td>
          <td />
        </tr>
        <tr>
          <td>
            city
          </td>
          <td>
            My City
          </td>
        </tr>
        <tr>
          <td>
            country
          </td>
          <td>
            russia
          </td>
        </tr>
        <tr>
          <td>
            email
          </td>
          <td>
            test@email.com
          </td>
        </tr>
        <tr>
          <td>
            password
          </td>
          <td>
            mysuperpass
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
